--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,82 @@
+body{
+    background-color: rgb(204, 177, 249);
+    color: rgb(23, 4, 125);
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    margin: 0;
+}
+#container{
+    width: 800px;
+    margin: 0 auto;
+    background-color: rgb(249, 159, 229);
+    padding: 40px;
+    border-left: #fff solid 5px;
+    border-right: #fff solid 5px;
+}
+h1{
+    background-color: rgb(249, 223, 144);
+    border: #fff, solid, 3px;
+    border-radius: 15px;
+    padding: 20px;
+    margin-bottom: 30px;
+    width: 60%;
+    text-align: center;
+    margin: 0px auto;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+h2{
+    text-align: center;
+    font-size: 1.2em;
+    font-style: italic;
+}
+h3{
+    border-left: double 20px rgb(3, 129, 76);
+    border-radius: 30px;
+    padding-left: 15px;
+}
+p{
+    line-height: 2.2em;
+}
+img{
+    float: left;
+    width: 300px;
+    border: #fff solid 3px;
+    border-radius: 15px;
+    margin-right: 20px;
+}
+a:link{
+    color: blue;
+    text-decoration: none;
+    font-weight: bold;
+}
+a:visited{
+    color: rgb(45, 74, 241);
+}
+a:hover{
+    color:chartreuse;
+    text-decoration: underline;
+}
+a:active{
+    color:rgb(3, 129, 76);
+}
+h3:hover{
+    border-color: aquamarine;
+}
+#pic1{
+    border: none;
+    width: 200px;
+}
+#pic2{
+    float: right;
+    margin-right: 0;
+    margin-left: 20px;
+}
 
+.highlight{
+    font-weight: bold;
+    background-color: yellow;
+    border: #fff solid 3px;
+    border-radius: 15px;
+}
+.highlight:hover{
+    background-color: aquamarine;
+}
