--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body{
     margin: 0;
 }
 #container{
-    width: 800px;
+    width: 1000px;
     margin: 0 auto;
     background-color: rgb(249, 159, 229);
     padding: 40px;
@@ -79,4 +79,56 @@ h3:hover{
 }
 .highlight:hover{
     background-color: aquamarine;
+}
+#sidebar{
+    background-color: antiquewhite;
+    width: 225px;
+    float:right;
+    border: 2px solid blueviolet;
+    margin: 30px;
+    line-height: 2.25em;
+}
+#sidebar h3{
+    padding: 5px;
+    width: 100px;
+    margin-left: 10px;
+}
+@media (max-width:1200px){
+    #container{
+        background-color: rgb(156, 12, 151);
+        width:800px;
+    }
+}
+@media (max-width: 992px){
+    #container{
+        width: 100%;
+    }
+    #container, p{
+        margin:0;
+        padding:0;
+        border: none;
+    }
+    body,h1,h2,h3,p,div{
+        background-color: aqua !important;
+        border:none;
+    }
+    body{
+        padding:20px;
+    }
+    #sidebar h3{
+        color: black;
+    }
+}
+@media (max-width:768px){
+    #sidebar{
+        display: none;
+    }
+    img, #pic1,#pic2{
+        float:none;
+        border:none;
+        width:100%;
+    }
+    h3{
+        margin:10px auto;
+    }
 }
